# brobier

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  prek.toml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  cli.py  main.py  pyproject.toml
backend/api/routes/: auth.py  beers.py  calendar.py  leaderboard.py
backend/api/routes/admin/: beers.py  calendar.py  users.py
backend/app/: main.py
backend/app/core/: config.py
backend/auth/: dependencies.py  jwt.py
backend/brobier/: cli.py  main.py
backend/brobier/api/routes/: auth.py  beers.py  calendar.py  leaderboard.py
backend/brobier/api/routes/admin/: beers.py  calendar.py  users.py
backend/brobier/auth/: dependencies.py  jwt.py  tokens.py
backend/brobier/core/: config.py  exceptions.py  security.py  time.py
backend/brobier/db/: engine.py  init_db.py
backend/brobier/db/models/: __init__.py  beer_entry.py  calendar_entry.py  login_code.py  refresh_token.py  user.py  user_rating.py
backend/brobier/schemas/: admin.py  auth.py  beer.py  calendar.py  user_rating.py
backend/brobier/seeds/: seed.py
backend/brobier/services/: auth_service.py  beers_service.py  calendar_service.py  leaderboard_service.py  sender.py  user_service.py
backend/brobier/templates/email/: login_code.html.jinja  login_code.txt.jinja
backend/core/: config.py  security.py
backend/db/: engine.py  init_db.py  session.py  utils.py
backend/db/models/: __init__.py  beer_entry.py  calendar_entry.py  login_code.py  refresh_token.py  user.py  user_rating.py
backend/email/: sender.py
backend/models/: __init__.py  beer_entry.py  calendar_entry.py  login_code.py  session.py  user.py  user_rating.py
backend/schemas/: admin.py  auth.py  calendar.py  leaderboard.py
backend/seeds/: seed.py
backend/services/: auth_service.py  sender.py
backend/tests/: conftest.py  mailpit_helpers.py
backend/tests/brobier/: setup_logger.py  test_health.py
backend/tests/brobier/api/: test_dependencies.py
backend/tests/brobier/api/routes/: test_auth.py  test_beers.py  test_calendar.py  test_leaderboard.py
backend/tests/brobier/api/routes/admin/: test_admin_beers.py  test_admin_calendar.py  test_users.py
backend/tests/brobier/auth/routes/: test_auth.py
backend/tests/brobier/core/: test_config.py  test_security.py
backend/tests/brobier/db/: test_db_session.py
backend/tests/brobier/services/: test_auth_service.py  test_beer_service.py  test_calendar_service.py  test_leaderboard_service.py  test_sender.py  test_user_service.py
backend/tests/plugins/: database.py  fastapi.py  globals.py  logger.py  mailpit.py
documentation/: frontend-setup-plan.md  routes.md  (+4 more)
(+35 files in other folders)
