[project]
name = 'brobier-backend'
version = '0.1.0'
description = 'Brobier FastAPI backend'
requires-python = '>=3.14'
dependencies = [
    'cryptography>=46.0.3',
    'fastapi>=0.120.4',
    'pydantic-settings>=2.11.0',
    'psycopg[binary]>=3.2.12',
    'sqlalchemy>=2.0.44',
    'sqlmodel>=0.0.27',
    'uvicorn[standard]>=0.38.0',
]

[dependency-groups]
dev = [
    'pytest>=8.4.2',
    'pytest-asyncio>=1.3.0',
    'ruff>=0.15.1',
    'ty>=0.0.40',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['app']
